--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,14 +1,20 @@
 @import "mixins";
 
-body, button, input, select, textarea {
+body,
+button,
+input,
+select,
+textarea {
   color: #5d656b;
   font-size: $font-size-base;
   font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
   line-height: 1;
 }
+
 body {
   background-color: #eee;
 }
+
 a {
   color: #686868;
   text-decoration: none;
@@ -18,7 +24,8 @@ a {
   }
 }
 
-html, body {
+html,
+body {
   overflow: hidden;
   width: 100%;
   height: 100%;
